@@ -474,7 +474,7 @@ do {							\
    stubs.  */
 #define LIB_SPEC "%{!nostdlib:%{!mlibscl:-lunixlib}%{mlibscl:-lscl}}"
 
-#define SUBTARGET_CPP_SPEC "-D__JMP_BUF_SIZE=27 %{mlibscl:-D__TARGET_SCL__} \
+#define SUBTARGET_CPP_SPEC "-D__JMP_BUF_SIZE=26 %{mlibscl:-D__TARGET_SCL__} \
 	%{mlibscl:-icrossdirafter /libscl} \
 	%{!mlibscl:-icrossdirafter /unixlib} \
 	%{posix:-D_POSIX_SOURCE}"
@@ -490,7 +490,7 @@ do {							\
 #define SUBTARGET_CPP_SPEC "%{mamu:-MD !Depend} \
 	%{mlibscl:-icrossdirafter /libscl} \
 	%{!mlibscl:-icrossdirafter /unixlib} \
-	-D__JMP_BUF_SIZE=27 %{mlibscl:-D__TARGET_SCL__} \
+	-D__JMP_BUF_SIZE=26 %{mlibscl:-D__TARGET_SCL__} \
 	%{posix:-D_POSIX_SOURCE}"
 
 #endif /* CROSS_COMPILE */
