@@ -1147,10 +1147,10 @@ chunk_size		*	16
 level_off		*	0
 list_off		*	4
 
-	/* UnixLib's jmp_buf is 26 words, Norcroft's is 22 words
-	   so gcc's is 27 (one more word than the biggest)
-	   setjmp_save is the offset to the 27th word.  */
-setjmp_save		*	(26*4)
+	/* UnixLib's jmp_buf is 25 words, Norcroft's is 22 words
+	   so gcc's is 26 (one more word than the biggest)
+	   setjmp_save is the offset to the 26th word.  */
+setjmp_save		*	(25*4)
 
 	AREA	|C$$code|, CODE, READONLY
 
