@@ -1,4 +1,9 @@
-Sun Mar 6 21:48:34: 2005  Alex Waugh  <alex@alexwaugh.com>
+Sat Mar 12 10:29:12 2005  Alex Waugh  <alex@alexwaugh.com>
+
+	* source/clib/setjmp.h, source/sys/_jmp.s: Remove unused entry from
+	  jmp_buf.
+
+Sun Mar 6 21:48:34 2005  Alex Waugh  <alex@alexwaugh.com>
 
 	* source/module/sul.s: Fix unpredictable MUL instruction.
 
